[gd_scene load_steps=4 format=3 uid="uid://cd3nqk38gnvj5"]

[ext_resource type="Script" path="res://scenes/robots/fruit_container.gd" id="1_8bmxs"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bklup"]
size = Vector2(38, 25)

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ir338"]

[node name="FruitPanelContainer" type="HBoxContainer"]
modulate = Color(1, 1, 1, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.0
offset_top = -27.0
offset_right = 27.0
offset_bottom = -11.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 2
alignment = 1
script = ExtResource("1_8bmxs")

[node name="InteractArea" type="Area2D" parent="."]
position = Vector2(24, 27)
collision_layer = 0
collision_mask = 2

[node name="InteractShape" type="CollisionShape2D" parent="InteractArea"]
position = Vector2(-0.668594, 2.5)
shape = SubResource("RectangleShape2D_bklup")
debug_color = Color(0.380392, 0.521569, 0.85098, 0.419608)

[node name="DisplayTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="Animator" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ir338")
}

[connection signal="timeout" from="DisplayTimer" to="." method="_on_display_timer_timeout"]
